--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
       "@testing-library/jest-dom": "^4.2.4",
       "@testing-library/react": "^9.5.0",
       "@testing-library/user-event": "^7.2.1",
+      "@types/jest": "^26.0.24",
+      "@types/node": "^16.4.5",
+      "@types/react": "^17.0.15",
+      "@types/react-dom": "^17.0.9",
       "gh-pages": "^3.1.0",
       "react": "^16.13.1",
       "react-dom": "^16.13.1",
-      "react-scripts": "3.4.1",
-      "styled-components": "^5.1.1"
+      "react-scripts": "^4.0.3",
+      "styled-components": "^5.1.1",
+      "typescript": "^4.3.5"
    },
    "scripts": {
       "start": "react-scripts start",
