--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
       ]
    },
    "devDependencies": {
+      "@types/styled-components": "^5.1.11",
       "@typescript-eslint/eslint-plugin": "^4.28.5",
       "@typescript-eslint/parser": "^4.28.5",
       "eslint": "^7.31.0",
