--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
       "react-dom": "^16.13.1",
       "react-scripts": "^4.0.3",
       "styled-components": "^5.1.1",
-      "typescript": "^4.3.5"
+      "typescript": "^4.3.5",
+      "uuid": "^8.3.2"
    },
    "scripts": {
       "start": "react-scripts start",
@@ -43,6 +44,7 @@
    },
    "devDependencies": {
       "@types/styled-components": "^5.1.11",
+      "@types/uuid": "^8.3.1",
       "@typescript-eslint/eslint-plugin": "^4.28.5",
       "@typescript-eslint/parser": "^4.28.5",
       "eslint": "^7.31.0",
